--- a/client/src/App.css
+++ b/client/src/App.css
@@ -60,7 +60,7 @@
   background-color: white;
 }
 
-#adminTitle {
+.adminTitle {
   font-size: 1.2rem;
   font-family: Impact;
   color: rgba(14, 58, 104, 0.938);
@@ -80,7 +80,7 @@
   color: inherit;
 }
 
-#addVactionButton {
+.adminButton {
   background-color: #a39d9da1;
   font-size: 0.8rem;
 }
@@ -132,7 +132,7 @@
 }
 
 .checkboxBtn {
-  opacity: 0.2;
+  opacity: 0;
   position: absolute;
   top: 37%;
   right: 0px;
@@ -158,6 +158,7 @@
 #chartWrapper {
   width: 90%;
   margin-left: 5%;
+  background-color: white;
 }
 
 /* from here below it is for footer.js components */
